# EF

./: .gitignore  CMakeLists.txt  test.cpp  test_huge_1.txt  test_huge_2.txt  test_huge_3.txt  test_huge_4.txt  test_huge_5.txt  test_loosetight_1.txt  test_results_EF1.txt  test_results_EF2.txt  test_results_EF3.txt
include/: EF_bucket.hpp  EF_bucket2.hpp  EF_bucket2v2.hpp  EF_bucketv3.hpp  EF_vigna.hpp  concept_type.hpp
